# Saber-Translator

./: .gitignore  1.md  2.md  3.md  4.md  README.md  REMOVE_WEB_IMPORT.md  app.py  app.spec  bubble_detection.py  implementation_plan.md.resolved  model_info.json  prompt_info.json  pyproject.toml  requirements-cpu.txt  requirements-gpu.txt  requirements.txt  start-original.bat  web-import-implementation.md  一键启动.bat  分析需求.md  开发手册.md  迁移方案.md  进程检测.bat
.ace-tool/: index.json
.claude/: settings.local.json
.github/workflows/: release.yml
.kiro/specs/vue-frontend-migration/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
config/: model_history.json  prompts.json  textbox_prompts.json
config/plugin_configs/: 气泡文本表情化.json  随机文本颜色.json
data/sessions/123/: image_0_translated.b64  image_10_clean.b64  image_10_original.b64  image_10_translated.b64  image_11_clean.b64  image_11_original.b64  image_11_translated.b64  image_12_clean.b64  image_12_original.b64  image_12_translated.b64  image_13_clean.b64  image_13_original.b64  image_13_translated.b64  image_14_clean.b64  image_14_original.b64  image_14_translated.b64  image_15_clean.b64  image_15_original.b64  image_15_translated.b64  image_16_original.b64  image_16_translated.b64  image_17_clean.b64  image_17_original.b64  image_17_translated.b64  image_18_original.b64  image_18_translated.b64  image_19_original.b64  image_1_clean.b64  image_1_original.b64  image_1_translated.b64  image_20_original.b64  image_20_translated.b64  image_21_clean.b64  (+54 more)
docs/: Auto_Color_Extraction_Design.md  RELEASE_GUIDE.md  REMOVE_WEB_IMPORT.md  folder-import-implementation.md  parallel-mode-development-guide.md  parallel-translation-design.md  save-load-development-guide.md  storage-format-development-guide.md  text-settings-development-guide.md  translation-pipeline-refactoring.md
plugins/: README.md
plugins/emoji_bubble/: __init__.py  plugin.py
plugins/ocr_text_normalizer/: __init__.py  plugin.py
plugins/ocr_text_replacer/: __init__.py  plugin.py
plugins/pipeline_lifecycle_plugin/: __init__.py  plugin.py
plugins/random_text_color/: __init__.py  plugin.py
plugins/style_mutation_plugin/: __init__.py  plugin.py
plugins/text_mutation_plugin/: __init__.py  plugin.py
plugins/translate_word_replacer/: __init__.py  plugin.py
plugins/translation_word_replacer/: plugin.py
src/app/: __init__.py  route_redirects.py  routes.py
src/core/: bookshelf_manager.py  color_extractor.py  compare_manager.py  config_models.py  detection.py  glossary_manager.py  inpainting.py  job_manager.py  large_image_detection.py  ocr.py  ocr_hybrid_manga_48.py  ocr_types.py  page_storage.py  pdf_processor.py  processing.py  quality_manager.py  rendering.py  session_manager.py  translation.py  translation_constraints.py  translation_merge.py  types_enhanced.py
src/interfaces/: baidu_ocr_interface.py  baidu_translate_interface.py  lama_interface.py  lama_mpe_interface.py  manga_ocr_interface.py  migan_interface.py  paddle_ocr_interface.py  paddle_ocr_onnx_interface.py  paddleocr_vl_interface.py  vision_interface.py  yolo_interface.py  youdao_translate_interface.py
src/plugins/: base.py  hooks.py  http_helpers.py  manager.py  package_io.py
src/shared/: ai_adapters.py  ai_provider_manifest.json  ai_providers.py  ai_transport.py  config_loader.py  constants.py  http_config.py  http_retry.py  openai_execution.py  openai_helpers.py  openai_options.py  openai_rate_limits.py  path_helpers.py  security.py  text_style_defaults.py  text_style_defaults_factory.json  types.py  validators.py
src/utils/: image_rearrange.py
static/: script.js  style.css
templates/: index.html
tests/: conftest.py  test_setup_validation.py
tests_backend/: manga_insight_character_cards_regression.py  manga_insight_regression.py  test_ai_provider_unification.py  test_ai_transport_async_unification.py  test_aux_yolo_detection.py  test_bookshelf_translation_constraints.py  test_color_extractor_device_selection.py  test_hq_translation_rpm.py  test_hybrid_ocr.py  test_lama_api_contract.py  test_lama_litelama_regression.py  test_manga_insight_character_studio.py  test_manga_insight_config_cleanup.py  test_manga_insight_continuation.py  test_manga_insight_image_gen_unification.py  test_manga_insight_structured_json_adoption.py  test_manga_insight_transport_unification.py  test_ocr_48px_batching.py  test_plugin_agent_api.py  test_plugin_package_io.py  test_plugin_runtime_paths.py  test_rendering_lama_mapping.py  test_saber_yolo_detection_integration.py  test_saber_yolo_refinement.py  test_text_style_defaults.py  test_translate_workflow_preferences_api.py  test_translation_constraints.py  test_translation_routes_constraints.py  test_user_settings_cleanup.py  test_vertical_punctuation_rendering.py  test_web_import_agent_runtime.py  test_web_import_settings_api.py
tools/: analyze_system_monitor.py  normalize_ellipsis_in_session.py  replace_translations_in_book.py  rerender_translated_images_in_session.py  start_system_monitor.ps1  stop_system_monitor.ps1  system_monitor.py
vue-frontend/: .stylelintrc.json  CODE_CLEANUP_REPORT.md  CODING_STYLE.md  FINAL_REPORT.md  INSIGHT_FIXES.md  INSIGHT_FIXES_CHECK.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+1991 files in other folders)
